Bug 528375: By default, only enable the AVMFEATURE_COMPILEPOLICY if AVMFEATURE_JIT is enabled. (r=rreitmai)